# rust_todos

./: .env  .env.example  Cargo.toml  notes.txt  postgres.yaml  readme.md
migrations/2023-12-25-191944_create_cocktails/: down.sql  up.sql
src/: main.rs
src/api/: api.rs  todos.rs  users.rs
src/models/: mod.rs  schema.rs  todo.rs
src/repository/: database.rs  mod.rs  todos.rs
